# CorneaNet-AI

./: .gitignore  Dockerfile  LICENSE  MS39 Descriptive Statistics.py  Makefile  README.md  Step 1 - MS39 (optimized, in testing).py  Step 1 - MS39 CSV Pipeline.ipynb  Step 1 - MS39 CSV Pipeline.py  Step 2 - MS39 (optimized, in testing).py  Step 2 - MS39 Cornea Colormaps.py  Zernike Reconstructions.py  pyproject.toml
.github/workflows/: ci.yml
borborbor/: borborbor.py
scripts/: profile_extract.py  profile_opd_deep.py  profile_opd_granular.py  validate_spline_optimization.py
src/corneaforge/: __init__.py  clinical_palette.json  computed_indices.py  core.py  corvis_parser.py  descriptive_stats.py  experimental_indices.py  nn_pipeline.py  server.py  validate.py  visual_pipeline.py
src/corneaforge/static/: index.html
tests/: conftest.py  test_computed_indices.py  test_core.py  test_corvis_parser.py  test_descriptive_stats.py  test_nn_pipeline.py  test_server.py  test_validate.py  test_visual_pipeline.py
